--- a/lecture-3/package.json
+++ b/lecture-3/package.json
@@ -18,10 +18,11 @@
   },
   "scripts": {
     "start": "yarn build:style && react-app-rewired start",
-    "build": "yarn build:style && react-app-rewired build",
+    "build": "yarn build:style && react-app-rewired build && yarn purge",
     "build:style": "postcss src/tailwind.css -o src/styles.css",
     "serve": "node ./server/server.js",
-    "server": "node ./node_modules/json-server/lib/cli/bin.js --watch ./server/database.json -c ./server/config.json"
+    "server": "node ./node_modules/json-server/lib/cli/bin.js --watch ./server/database.json -c ./server/config.json",
+    "purge": "purgecss --css ./build/static/css/*.css --output ./build/static/css/ --content ./build/index.html ./build/static/js/*.js --config ./purgecss.config.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,6 +45,7 @@
     "json-server": "^0.15.1",
     "postcss-cli": "^7.1.0",
     "preload-webpack-plugin": "3.0.0-beta.4",
+    "purgecss": "^4.1.3",
     "serve": "^11.3.2"
   }
 }
